--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,18 +1,15 @@
 
 .header{
-   
-    color:cornflowerblue;
-    padding: 10px;
-    background-color:aliceblue;
-    border: 1px solid lightgrey;
-    
+        position: sticky;
+        top: 0;
+        z-index: 2;
 }
-.header a{
+/* .header a{
 text-decoration: none;
 margin-right: 20px;
 font-size: 17px;
 color: black;
-}
+} */
 .search{
     width: 20%;
     display: flex;
@@ -22,4 +19,18 @@ color: black;
     height: 50px;
     margin-left: 60px;
     margin-right: -30px;
+}
+
+
+.nav a:hover {
+    border-bottom: 2px solid white;
+}
+
+.name{
+    font-size: 30px;
+}
+.fa-tooth{
+    font-size: 30px;
+    padding-right: 10px;
+    color:white
 }
