--- a/src/components/Service/Service.css
+++ b/src/components/Service/Service.css
@@ -2,6 +2,7 @@
     height: 500px;
     width: 400px;
     padding: 10px;
+    box-shadow: 5px 10px 5px 5px #888888;
     
 }
 .card-img{
@@ -18,5 +19,13 @@
 color: royalblue;
 }
 .card-container:hover{
-    border: 2px solid royalblue;
+    border: 1px solid royalblue;
+}
+
+.title{
+    transition: transform 1s;
+}
+.card-container :hover .title{
+    transform: translate(25%);
+    color: royalblue;
 }
