--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,27 +1,16 @@
-
+/* header style */
 .header{
         position: sticky;
         top: 0;
         z-index: 2;
 }
-/* .header a{
-text-decoration: none;
-margin-right: 20px;
-font-size: 17px;
-color: black;
-} */
+
 .search{
     width: 20%;
     display: flex;
 }
-.logo{
-    width: 70px;
-    height: 50px;
-    margin-left: 60px;
-    margin-right: -30px;
-}
 
-
+/* navigation hover */
 .nav a:hover {
     border-bottom: 2px solid white;
 }
