--- a/src/components/Service/Service.css
+++ b/src/components/Service/Service.css
@@ -1,3 +1,4 @@
+/* card style */
 .card-container{
     height: 500px;
     width: 400px;
@@ -15,9 +16,9 @@
     color: white;
     line-height: 30px;
 }
-.card-container:hover title{
+/* .card-container:hover title{
 color: royalblue;
-}
+} */
 .card-container:hover{
     border: 1px solid royalblue;
 }
